# CppPlayer

./: .gitignore  CMakeLists.txt  CPack.cmake  CppPlayer.pc.in  LICENSE  README.md
include/: Aliases.hpp  ArgsReader.hpp  ArgsReaderImpl.hpp  ArgsWriter.hpp  ArgsWriterImpl.hpp  Assertions.hpp  CallMap.hpp  CppCallError.hpp  CppCallIO_Json.hpp  CppCallIO_JsonImpl.hpp  CppCallMap.hpp  CppCallMapImpl.hpp  CppCallPlayer.hpp  CppCallPlayerImpl.hpp  CppCallPlayerInterface.hpp  CppCallRecorder.hpp  CppCallRecorderImpl.hpp  CppCallRecorderInterface.hpp  CppCallStream.hpp  CppCallStreamImpl.hpp  CppPlayer.hpp  CppRecorder.hpp  IAgent.hpp  ICallable.hpp  ICppCallIo.hpp  IIo.hpp  IOperational.hpp  IPlayer.hpp  IRecorder.hpp  ITrackable.hpp  JsonIo.hpp  NamespaceAliases.hpp  assertions.hpp  callstream.hpp  crserror.hpp  guidvalue.hpp  imain.hpp  include_purerapidjson.hpp  iserver.hpp
samples/: CMakeLists.txt
samples/IHFDM/: CMakeLists.txt  IHFDMmain.cpp  IHFDMserver.cpp  IHFDMtrackable.cpp  PropertySetWrapper.cpp  PropertySetWrapper.h  RootPropertyWrapper.cpp  RootPropertyWrapper.h  WorkspaceWrapper.cpp  WorkspaceWrapper.h
samples/IHFDM/include/: IHFDMmain.h  IHFDMserver.h  IHFDMtrackable.h  IPropertySet.h  IRootProperty.h  IWorkspace.h  PropertyId.h
